added hello javascript handlers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
   <head>
   </head>
   <body>
+    <button onclick="hello('google').login()">google</button>
+    <button onclick="hello('google').logout()">logout</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hellojs/2.0.0-1/hello.all.js">
+    <script src="index.js" />
     <script>
       hello.init({
         google: ""
